<resources>

    <string name="app_name">Peetme</string>
    <string name="title_activity_animal_maps">Map</string>
    <string name="title_activity_main">Peetme</string>
    <string name="firebase_error_login" id="firebase_error_login">Error login</string>
    <string name="login_normal_account" id="login_normal_account">No, start with a normal account</string>

    <!-- FIELDS -->
    <string name="email_taken" id="email_taken">This email is taken</string>
    <string name="invalid_email" id="invalid_email">Invalid Email</string>
    <string name="invalid_password" id="invalid_password">Invalid password. Provide at least 8 characters</string>
    <string name="signing_up" id="signing_up">Signing Up</string>
    <string name="logging_in" id="logging_in">Logging In</string>
    <string name="fields_empty" id="fields_empty">Empty text fields</string>
    <string name="authentication_failed" id="authentication_failed">Authentication failed</string>

    <string name="setup_account" id="setup_account">Authentication failed</string>
    <string name="save" id="save">Save</string>

    <string name="text_login" id="text_login">Log In</string>
    <string name="log_in" id="log_in">Log In</string>
    <string name="register" id="register">Register</string>
    <string name="create_account" id="create_account">Create new account</string>
    <string name="password" id="password">Password</string>
    <string name="email" id="email">Email</string>
    <string name="enter_display_name" id="enter_display_name">Enter your display name</string>
    <string name="display_name" id="display_name">Display name</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sing_out">Sing out</string>
    <string name="animals">Animals</string>
    <string name="vets">Vets</string>
    <string name="animal_shelters">Animal shelters</string>
    <string name="stray_animal">Stray animals</string>
    <string name="my_pets">My animals</string>
    <string name="my_vets">My vets</string>
    <string name="my_account">My account</string>

    <string name="updating_info" id="updating_info">Updating info</string>

    <string name="location_1" id="location_1">Location settings satisfy the settings.</string>
    <string name="location_2" id="location_2">Location settings do not satisfy the settings. A help dialog will be displayed.</string>
    <string name="location_3" id="location_3">Dialogue Intent does not work.</string>
    <string name="location_4" id="location_4">Location settings are not appropriate.</string>
    <string name="select_range" id="select_range">Select the search range</string>
    <string name="range_updated" id="range_updated">Search range updated</string>
    <string name="current_location" id="current_location">Current location.</string>
    <string name="config_account" id="config_account">You need to setup your account.</string>
    <string name="allowed_user" id="allowed_user">The user allowed the change of location settings.</string>
    <string name="user_did_not_allow" id="user_did_not_allow.">The user did not allow the change of location settings.</string>
    <string name="new_location" id="new_location">New location.</string>
    <string name="null_location" id="null_location">Null location.</string>
    <string name="location_not_found" id="location_not_found">Location not found.</string>
    <string name="permissions" id="permissions">Permissions not granted.</string>
    <string name="latitude" id="latitude">Latitude</string>
    <string name="longitude" id="longitude">Longitude</string>
    <string name="error_geofire" id="error_geofire">There was an unexpected error querying GeoFire: </string>
    <string name="connection_suspended" id="connection_suspended">Connection suspended... </string>
    <string name="failed_to_connect" id="failed_to_connect">Failed to connect... </string>

    <string name="edit" id="edit">Edit</string>
    <string name="delete" id="delete">Delete</string>
    <string name="ok" id="ok">OK</string>
    <string name="cancel" id="cancel">Cancel</string>

    <string name="are_you_sure_delete" id="are_you_sure_delete">Are you sure you want to delete this animal?</string>
    <string name="confirm_delete" id="confirm_delete">Confirm Delete</string>
    <string name="animal_deleted" id="animal_deleted">Animal deleted</string>
    <string name="vet_deleted" id="vet_deleted">Vet deleted</string>


    <string name="add" id="add">Add</string>
    <string name="add_an_animal" id="add_an_animal">Add an animal</string>
    <string name="add_a_vet" id="add_a_vet">Add a vet</string>
    <string name="add_image_from" id="add_image_from">Add image from</string>
    <string name="camera" id="camera">Camera</string>
    <string name="gallery" id="gallery">Gallery</string>

    <string name="title_activity_pet_index">Animals</string>
    <string name="title_activity_pet_create">Adding an animal</string>
    <string name="title_activity_my_animals">My animals</string>
    <string name="title_activity_my_vets">My vets</string>

    <string name="title_activity_vet_index">Vets</string>
    <string name="title_activity_vet_create">Adding a vet</string>

    <string name="title_activity_shelter_index">Shelters</string>
    <string name="title_activity_shelter_create">Adding a shelter</string>

    <string name="title_activity_stray_index">Stray animals</string>
    <string name="title_activity_stray_create">Adding a stray animal</string>

    <string name="saving" id="saving">Saving</string>
    <string name="pet_saved" id="pet_saved">Animal successfully saved</string>
    <string name="vet_saved" id="vet_saved">Vet successfully saved</string>
    <string name="saved" id="saved">Successfully saved</string>

    <string name="species" id="species">Species</string>
    <string name="name_hint" id="name_hint">If no name, give one</string>
    <string name="name">Name</string>
    <string name="description_hitn" id="description_hitn">+.g It is playful, funny, loyal</string>
    <string name="description">Description</string>
    <string name="breed">Breed</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="size" id="size">Size</string>
    <string name="health" id="health">Health</string>
    <string name="castrated" id="castrated">Castrated</string>
    <string name="wormed" id="wormed">Wormed</string>
    <string name="vaccinated" id="vaccinated">Vaccinated</string>
    <string name="additionalInfo">Additional info</string>
    <string name="additionalInfo_hint">e.g I found it about 5 days ago</string>
    <string name="select" id="select">Select an option</string>
    <string name="image_not_found" id="image_not_found">Image not found</string>

    <string name="phone" id="phone">Phone</string>
    <string name="phone_animal_hint" id="phone_animal_hint">Your phone number</string>
    <string name="phone_vet_hint" id="phone_vet_hint">Vet\'s telephone number</string>
    <string name="name_vet_hint" id="name_vet_hint">Vet\'s name</string>
    <string name="open247" id="open247">Open 24/7</string>
    <string name="yes" id="yes">Yes</string>
    <string name="no" id="no">No</string>

    <string name="created_date" id="created_date">Created date</string>
    <string name="my_name_is" id="my_name_is">My name is</string>
    <string name="adopted" id="adopted">Adopted</string>

    <string name="dog" id="dog">Dog</string>
    <string name="cat" id="cat">Cat</string>
    <string name="rabbit" id="rabbit">Rabbit</string>
    <string name="pig" id="pig">Pig</string>
    <string name="bird" id="bird">Bird</string>
    <string name="rodent" id="rodent">Rodent</string>
    <string name="other" id="other">Other</string>

    <string name="select_age_puppy" id="select_age_puppy">Puppy</string>
    <string name="select_age_young" id="select_age_young">Young</string>
    <string name="select_age_adult" id="select_age_adult">Adult</string>
    <string name="select_age_old" id="select_age_old">Old</string>

    <string name="female" id="female">Female</string>
    <string name="male" id="male">Male</string>

    <string name="select_size_small" id="select_size_small">Small</string>
    <string name="select_size_medium" id="select_size_medium">Medium</string>
    <string name="select_size_large" id="select_size_large">Large</string>

    <string name="select_health_bad">Bad</string>
    <string name="select_health_ok">Regular</string>
    <string name="select_health_good">Good</string>

    <string name="locationBtn">Save your current location</string>
    <string name="location">Location</string>
    <string name="done" id="done">Location saved</string>
    <string name="submitBtn">Submit</string>
    <string name="validation" id="validation">Please check the fields and try to send the form again</string>

    <string name="facebook_app_id">1494119710604068</string>

</resources>
