<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_animals"
            android:icon="@mipmap/ic_animals_black_24dp"
            android:title="@string/add_an_animal" />
        <item
            android:id="@+id/nav_vets"
            android:icon="@mipmap/ic_vets_black_24dp"
            android:title="@string/add_a_vet" />
        <!--<item-->
        <!--android:id="@+id/nav_animal_shelters"-->
        <!--android:icon="@mipmap/ic_shelters_black_24dp"-->
        <!--android:title="@string/animal_shelters" />-->
        <!--<item-->
        <!--android:id="@+id/nav_stray_animal"-->
        <!--android:icon="@mipmap/ic_report_black_24dp"-->
        <!--android:title="@string/stray_animal" />-->

    </group>

    <group
        android:id="@+id/menu_mid"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_my_pets"
            android:divider="#FFFFFF"
            android:dividerHeight="1dp"
            android:icon="@mipmap/ic_animals_black_24dp"
            android:title="@string/my_pets" />
        <item
            android:id="@+id/nav_my_vets"
            android:icon="@mipmap/ic_vets_black_24dp"
            android:title="@string/my_vets" />

    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_account_circle_black_24dp"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_sing_out"
            android:icon="@mipmap/ic_exit_to_app_black_24dp"
            android:title="@string/sing_out" />

    </group>

</menu>
