<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="peetme.app.trunimal.com.peetme.PetCreateActivity">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="15dp"
        android:focusableInTouchMode="true">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/add_btn"
            android:id="@+id/selectImage"
            android:background="@drawable/input_outline"
            android:src="@mipmap/add_btn"
            android:scaleType="centerCrop"
            android:layout_marginBottom="20dp"
            android:adjustViewBounds="true" />

        <TextView
            android:text="@string/species"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSpecies"
            android:textColor="@color/textViewColor"
            android:textSize="20dp"/>

        <Spinner
            android:id="@+id/spinnerSpecies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/input_outline" />

        <TextView
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewName"
            android:textColor="@color/textViewColor"
            android:textSize="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:ems="10"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/input_outline"
            android:id="@+id/nameField"
            android:hint="@string/name_hint"
            android:textColorHint="@color/hintColor"
            android:maxLines="1" />

        <TextView
            android:text="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewDescription"
            android:textColor="@color/textViewColor"
            android:textSize="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:padding="10dp"
            android:background="@drawable/input_outline"
            android:layout_below="@+id/nameField"
            android:layout_centerHorizontal="true"
            android:id="@+id/descField"
            android:textColorHint="@color/hintColor"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/description_hitn" />

        <TextView
            android:text="@string/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewAge"
            android:textColor="@color/textViewColor"
            android:textSize="20dp"/>

        <Spinner
            android:id="@+id/spinnerAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/input_outline" />

        <TextView
            android:text="@string/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewGender"
            android:textColor="@color/textViewColor"
            android:textSize="20dp"/>

        <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_outline" />

        <TextView
            android:text="@string/size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSize"
            android:textColor="@color/textViewColor"
            android:textSize="20dp"/>

        <Spinner
            android:id="@+id/spinnerSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/input_outline" />

        <TextView
            android:text="@string/health"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewHealth"
            android:textColor="@color/textViewColor"
            android:textSize="20dp"/>

        <Spinner
            android:id="@+id/spinnerHealth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/input_outline" />

        <Switch
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/castrated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/switchCastrated"
            android:textSize="18dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:checked="false"
            android:textColor="@color/textViewColor" />

        <Switch
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/vaccinated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/switchVaccinated"
            android:textSize="18dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/textViewColor" />

        <Switch
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/wormed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/switchWormed"
            android:textSize="18dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/textViewColor" />

        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/additionalInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewAdditionalInfo"
            android:textColor="@color/textViewColor"
            android:textSize="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="15dp"
            android:background="@drawable/input_outline"
            android:id="@+id/additionalInfoField"
            android:hint="@string/additionalInfo_hint"
            android:textColorHint="@color/hintColor"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

        <TextView
            android:text="@string/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewLocation"
            android:textColor="@color/textViewColor"
            android:textSize="20dp"/>

        <Button
            android:text="@string/locationBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/locationBtn"
            android:background="@drawable/input_outline"
            android:textColor="@color/common_google_signin_btn_text_light_default"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewLocationResult"
            android:textColor="@color/hintColor"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textSize="18dp"/>

        <Button
            android:text="@string/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submitBtn"
            android:background="@drawable/btn_background"
            android:textColor="@android:color/white"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"/>

    </LinearLayout>

    </ScrollView>

</RelativeLayout>
