<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_vet_create"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="peetme.app.trunimal.com.peetme.VetCreateActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/selectImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:adjustViewBounds="true"
                    android:background="@mipmap/btn_add"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/btn_add"
                    app:srcCompat="@mipmap/btn_add" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewNameTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/textViewColor"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/nameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/input_outline"
                    android:ems="10"
                    android:hint="@string/name_vet_hint"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:padding="15dp"
                    android:textColorHint="@color/hintColor" />

                <TextView
                    android:id="@+id/textViewPhoneTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:maxLines="1"
                    android:textColor="@color/textViewColor"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/phoneField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/nameField"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/phone_vet_hint"
                    android:background="@drawable/input_outline"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:padding="10dp"
                    android:textColorHint="@color/hintColor" />

                <Switch
                    android:id="@+id/switchOpen247"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/open247"
                    android:textColor="@color/textViewColor"
                    android:textSize="18dp" />

                <Button
                    android:id="@+id/submitBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/btn_background"
                    android:text="@string/submitBtn"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
